--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,11 +80,10 @@ header {
 }
 
 .news-container ul {
-  list-style-type: none;
-  padding: 0;
+  list-style-type: disc;
+  padding-left: 20px;
 }
 
 .news-container li {
-  padding: 10px;
-  border-bottom: 1px solid #ddd;
+  padding: 10px 0;
 }
