--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,7 +69,7 @@ header {
 .news-container {
   height: 200px;
   overflow-y: scroll;
-  border: 1px solid #ddd;
+  /* border: 1px solid #ddd; */
 }
 
 .news-container ul {
