--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,6 +29,26 @@ header {
   margin-left: 20px;
 }
 
+.main-container {
+  display: flex;
+}
+
+.left-column {
+  width: 33%;
+  padding: 20px;
+  text-align: center;
+}
+
+.left-column img {
+  width: 100%;
+  border-radius: 50%;
+}
+
+.right-column {
+  width: 67%;
+  padding: 20px;
+}
+
 .intro {
   text-align: center;
   margin: 20px 20px;
