--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,11 +37,15 @@ header {
   width: 33%;
   padding: 20px;
   text-align: center;
+  display: flex; /* Add Flexbox */
+  align-items: center; /* Center vertically */
+  justify-content: center;
 }
 
 .left-column img {
   width: 100%;
   max-width: 200px;
+  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
   border-radius: 50%;
 }
 
@@ -152,5 +156,4 @@ header {
 .image-container img {
   width: 30%;
   height: auto;
-  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
 }
