--- a/stylesheet.css
+++ b/stylesheet.css
@@ -139,6 +139,10 @@ header {
   margin-bottom: 10px;
 }
 
+.cv-publication h2.underline {
+  border-bottom: 2px solid black; /* Add underline to h2 element */
+}
+
 .images {
   padding: 20px;
 }
