--- a/stylesheet.css
+++ b/stylesheet.css
@@ -159,7 +159,7 @@ header {
 .image-container img {
   width: 30%;
   max-width: 200px;
-  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+  /* border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%; */
 }
 
 /* Media Queries for responsiveness */
