--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,6 +31,7 @@ header {
 
 .main-container {
   display: flex;
+  flex-wrap: wrap; /* Add flex-wrap for responsiveness */
 }
 
 .left-column {
@@ -164,6 +165,9 @@ header {
 
 /* Media Queries for responsiveness */
 @media (max-width: 768px) {
+  .main-container {
+    flex-direction: column; /* Change to column direction */
+  }
   .left-column, .right-column {
     width: 100%;
   }
