--- a/stylesheet.css
+++ b/stylesheet.css
@@ -155,12 +155,18 @@ header {
 .image-container {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap; /* Add flex-wrap for responsiveness */
 }
 
 .image-container img {
   width: 30%;
   max-width: 200px;
-  /* border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%; */
+  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+}
+
+.image-container img.landscape {
+  width: 100%;
+  max-width: 300px;
 }
 
 /* Media Queries for responsiveness */
@@ -172,6 +178,10 @@ header {
     width: 100%;
   }
   .left-column img {
+    max-width: 100%;
+  }
+  .image-container img {
+    width: 100%;
     max-width: 100%;
   }
 }
