--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ header {
 
 a {
   text-decoration: none;
-  color: #bce2e8;
+  color: #008CDD;
 }
 
 .container {
@@ -166,7 +166,6 @@ a {
 .image-container img {
   width: 30%;
   max-width: 200px;
-  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
 }
 
 .image-container img.landscape {
