--- a/stylesheet.css
+++ b/stylesheet.css
@@ -166,9 +166,5 @@ a {
 .image-container img {
   width: 30%;
   max-width: 200px;
-}
-
-.image-container img.landscape {
-  width: 100%;
-  max-width: 300px;
+  border-radius: 0%;
 }
